force-app/main/default/objects/Legal_Opini_Approval__c/Legal_Opini_Approval__c.object-meta.xml
<CustomObject>
    <description>shadow object for application__c</description>
    <label>Legal Opinion</label>
    <nameField>
        <label>Legal Opini</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Opini Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>