force-app/main/default/objects/Legal_Opini_Approval__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id from Application__c</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Legal Opini Approvals</relationshipLabel>
    <relationshipName>Legal_Opini_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>