force-app/main/default/objects/Legal_Opini_Approval__c/fields/Approval_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Opini_Approvals2</relationshipName>
    <type>Lookup</type>
</CustomField>