force-app/main/default/objects/Legal_Opini_Approval__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>approval date</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>