force-app/main/default/objects/Legal_Opini_Approval__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>Approval Notes</description>
    <label>Approval Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>