force-app/main/default/objects/Legal_Opini_Approval__c/fields/Is_Current_LAO__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_LAO__c</fullName>
    <description>( ISBLANK(Application__r.Delegated_LAO__c) &amp;&amp;  BEGINS(OwnerId ,$User.Id ) ) || ( BEGINS(Application__r.Delegated_LAO__c, $User.Id) )

Update</description>
    <formula>(( ISBLANK(Application__r.Delegated_LAO__c) &amp;&amp; BEGINS(OwnerId ,$User.Id ) ) || ( BEGINS(Application__r.Delegated_LAO__c, $User.Id) )) ||  $User.Is_Debug_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current LAO</label>
    <type>Checkbox</type>
</CustomField>