force-app/main/default/objects/Legal_Opini_Approval__c/fields/Spv_AO__c.field-meta.xml
<CustomField>
    <fullName>Spv_AO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spv AO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Opini_Approvals3</relationshipName>
    <type>Lookup</type>
</CustomField>