force-app/main/default/objects/Legal_Opini_Approval__c/fields/Status_Approval__c.field-meta.xml
<CustomField>
    <fullName>Status_Approval__c</fullName>
    <description>status approval</description>
    <label>Approval Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>